added additional info to the report